# agents-playground

./: .env.example  .gitignore  README.md  pyproject.toml  test_pr_analyzer_simple.py
examples/: README.md  multi_level_summary_demo.py  prebid_demo.py  release_analysis_demo.py  test_prebid_release.py
src/agents_playground/: __init__.py  agents.py  detectors.py  file_context.py  github_release_agent.py  main.py  prebid_agent.py
tests/: test_agents.py  test_github_debug.py  test_github_integration.py  test_pr_file_analyzer.py  test_prebid_agent.py  test_release_agent.py
